src/styles/custom.css
/* ... */
:root {
  /* Customize the font style here */

  --sl-font: "Roboto Flex Variable", sans-serif;
  --font-mono: Noto Mono, Menlo, Monaco, Consolas, monospace;
  font-weight: 400;
  --fb-scrollbar-height: 0.250rem;
  --purple-hsl: 205, 60%, 60%;
  --overlay-blurple: hsla(var(--purple-hsl), 0.4);
  text-underline-offset: .25em;
  --border-radius: 8px;
  --space-xs: clamp(1rem, 0.75rem + 0vi, 0.75rem);
  /* Style for theme toggle switch */
  --duration-300: 300ms;
  --duration-400: 400ms;
  --duration-1200: 1200ms;
  --duration-3000: 3000ms;
  --ease: cubic-bezier(0.25, 0, 0.3, 1);
  --ease-elastic: cubic-bezier(0.5, 1.25, 0.75, 1.25);
  --ease-out: cubic-bezier(0, 0, 0, 1);
  --outline-offset: 2px;
  --outline-offset-lg: 4px;
  --outline-width: 2px;
  --color-text-highlight: var(--sl-color-accent);
  /* --color-text-highlight: var(--color-white); */
  --fb-theme-btn-color-text: var(--sl-color-accent-high);
  --outline-width: 2px;
  --rounded-full: 1e5px;
  --header-button-size: 2rem;
  --size-1: 0.25rem;
  --size-npx: -1px;
  --fb-toc-current-text-color: var(--sl-color-accent-high);
  --fb-font-weight-semibold: 500;
  --fb-h5-font-size: .875rem;
  /* Steps component: */
  --steps-hairline-color: var(--sl-color-accent-high);
  --paragraph-spacing: 1.5rem;
  --fb-table-border-radius: .375rem;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: 'Plus Jakarta Sans Variable', sans-serif;
}


/* date page title onl 2.5rem on mobile devices */
@media (max-width: 768px) {
  [data-page-title] {
    font-size: 2.5rem;
  }
}

/* --------------------- */
/* - Code block style  - */
/* --------------------- */
.expressive-code {
  border-radius: var(--border-radius);
  box-shadow: var(--sl-shadow-sm);
}

/* CodeBlock overrides */
.sl-markdown-content .expressive-code .ec-line {
  margin-block-start: initial;
}

.codeblock .expressive-code figure.frame {
  margin-block-start: initial;
}

pre.astro-code {
  border: 0;
}

@media screen and (min-width: 80rem) {
  .expressive-code {
    max-width: 48rem;
  }
}

/* Style for the expressive code block component */
/* Code markers */
.expressive-code figcaption {
  border-bottom: 1px solid var(--fb-ec-caption-bb-color) !important;
  background: var(--fb-ec-caption-bg-color) !important;
}

.expressive-code .frame.has-title:not(.is-terminal) .title {
  position: relative;
  /* color: var(--sl-color-text) !important; */
  background: none !important;
  /* border-bottom: 1px solid #dadde1 !important; */
  /* border-bottom: none; */
  font-size: 85%;
  padding: .55rem 1rem !important;
  overflow: hidden;
  font-weight: 600;
}

.expressive-code .frame.has-title:not(.is-terminal) .language-label,
.expressive-code .frame.has-title:not(.is-terminal) .copy {
  margin-top: 0.4rem;
}

/* Table of contents:
Style overrides: Right sidebar, items of the table of content */
.right-sidebar-panel starlight-toc ul li[class^=astro-] a {
  border-radius: 0%;
  display: inline-block;
  padding: .5rem 1.1rem;
  text-decoration: none;
  width: fit-content;
  border-left: 2px solid var(--sl-color-gray-5);
  font-weight: 400;

  /* Current selected item in the TOC */
  &:where([aria-current='true']) {
    border-left: 3px solid var(--fb-toc-color-border);
    color: var(--sl-color-white);
    background-color: var(--fb-toc-color-current-bg);
    width: fit-content;
    font-weight: 600;
    border-bottom-right-radius: .25rem !important;
    border-top-right-radius: .25rem !important;
  }

  &:hover {
    font-weight: 600;
  }
}

/* Pagination override styles */
.pagination-links {

  /* border-block-start: 2px solid var(--sl-color-gray-6); */
  a {
    /* border: 0; */
    box-shadow: initial;
  }

  :hover {
    box-shadow: initial;
    border-color: var(--sl-color-accent-high);
    box-shadow: var(--sl-shadow-sm);
  }

  a>span {
    font-size: var(--fb-h5-font-size);
    font-weight: 600;
  }

  a .link-title {
    color: var(--sl-color-text-accent);
    font-size: 1rem;
    font-weight: 600;
    transition: color 300ms ease-out;
  }
}

/* Steps starlight component */
.sl-steps {
  /* --sl-color-hairline-light: var(--steps-hairline-color); */
  --bullet-size: calc(var(--sl-line-height) * 1rem);
  --bullet-margin: .2rem !important;

  li {
    padding-left: 45px;
  }

  >li:before {
    --fb-steps-dimension: 30px;
    background-color: var(--fb-steps-bg-color);
    /* background-color: var(--sl-color-gray-6); */
    color: var(--fb-steps-text-color) !important;
    box-shadow: none !important;
    font-size: .8rem;
    width: var(--fb-steps-dimension);
    height: var(--fb-steps-dimension);
    text-align: center;
    line-height: var(--fb-steps-dimension);
    /* box-shadow: inset 0 0 0 1px var(--sl-color-gray-5) !important; */
  }
}
/* ... */

